add reply requests functionality

--- a/PetjadesApi/PetjadesApi/appsettings.json
+++ b/PetjadesApi/PetjadesApi/appsettings.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Email": {
+    "From": "cadapetjadacompta@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "User": "cadapetjadacompta@gmail.com",
+    "Password": "xdqihrhbrjbazatd"
+  }
+
 }
