prepare appsettings for production

--- a/PetjadesApi/PetjadesApi/appsettings.json
+++ b/PetjadesApi/PetjadesApi/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-C97JNKB;Database=PetjadesApi;Integrated Security=True;TrustServerCertificate=True;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,11 +8,10 @@
   "AllowedHosts": "*",
 
   "Email": {
-    "From": "cadapetjadacompta@gmail.com",
-    "Smtp": "smtp.gmail.com",
-    "Port": 587,
-    "User": "cadapetjadacompta@gmail.com",
-    "Password": "xdqihrhbrjbazatd"
+    "From": "",
+    "Smtp": "",
+    "Port": 0,
+    "User": "",
+    "Password": ""
   }
-
 }
